--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <f:view>
         <ui:composition>
-                <p:menubar id="menubar" model="#{sessionController.model}"/>
+            <p:tieredMenu id="menubar" model="#{sessionController.model}"/>
         </ui:composition>
     </f:view>
 </html>
