--- a/web/herramientas/disciplina.xhtml
+++ b/web/herramientas/disciplina.xhtml
@@ -6,7 +6,7 @@
      xmlns:ui="http://java.sun.com/jsf/facelets"
      xmlns:sec="http://www.springframework.org/security/facelets/tags">
 <f:view>
-<ui:composition template="../plantilla1.xhtml">
+<ui:composition template="#{applicationController.plantilla}">
     <ui:define name="navegador">
         <ui:include src="../menu.xhtml"/>
     </ui:define>
