--- a/web/permisostrabajo/gestion_notas.xhtml
+++ b/web/permisostrabajo/gestion_notas.xhtml
@@ -5,7 +5,7 @@
      xmlns:f="http://java.sun.com/jsf/core"
      xmlns:ui="http://java.sun.com/jsf/facelets">
 <f:view>
-<ui:composition template="../plantilla1.xhtml">
+<ui:composition template="#{applicationController.plantilla}">
     <ui:define name="navegador">
         <ui:include src="../menu.xhtml"/>
     </ui:define>
