--- a/web/reportes/reportes.xhtml
+++ b/web/reportes/reportes.xhtml
@@ -8,7 +8,7 @@
 
     <f:view>
 
-        <ui:composition template="../plantilla1.xhtml">
+        <ui:composition template="#{applicationController.plantilla}">
             <ui:define name="navegador">
                 <ui:include src="../menu.xhtml"/>
             </ui:define>
