--- a/web/permisostrabajo/mis_permisos.xhtml
+++ b/web/permisostrabajo/mis_permisos.xhtml
@@ -4,7 +4,7 @@
      xmlns:f="http://java.sun.com/jsf/core"
      xmlns:ui="http://java.sun.com/jsf/facelets">
 <f:view>
-<ui:composition template="../plantilla2.xhtml">
+<ui:composition template="#{applicationController.plantilla}">
     <ui:define name="navegador">
         <ui:include src="../menu.xhtml"/>
     </ui:define>
