--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -35,8 +35,9 @@
         </h:form>
     </ui:define>
     <ui:define name="contenido">
-        
-        <p:graphicImage value="images/empresarial.jpg" />
+        <div class="index_cont">
+            <p:graphicImage value="images/logo.png" />
+        </div>
     </ui:define>
   </ui:composition>
 </f:view>
